# vauxoodocstheme

./: .gitignore  .gitreview  CONTRIBUTING.rst  HACKING.rst  README.rst  RELEASENOTES.rst  setup.cfg  tox.ini
doc/source/: conf.py  configure_access_and_security_for_instances.rst  create_and_manage_networks.rst  dashboard_demo.rst  index.rst  section_dashboard_access_and_security.rst
openstackdocstheme/theme/openstackdocs/: header.html  layout.html  license_cc.html  script_footer.html
openstackdocstheme/theme/openstackdocs/static/js/: navigation.js
releasenotes/notes/: bug-project-e9ff50f6149d2be1.yaml  sidebarlinks-db0a8463f32ab95d.yaml
releasenotes/source/: conf.py  index.rst
vauxoodocstheme/: __init__.py  version.py
vauxoodocstheme/theme/openstackdocs/: footer.html
vauxoodocstheme/theme/openstackdocs/static/css/: combined.css
vauxoodocstheme/theme/openstackdocs/static/js/: docs.js
vauxoodocstheme/theme/vauxoodocs/: navigation.html  sidebartoc.html
vauxoodocstheme/theme/vauxoodocs/static/css/: styles.css
