[metadata]
name = vauxoodocstheme
summary = Vauxoo Docs Theme
description-file =
    README.rst
author = Vauxoo
author-email = vauxoo-dev@lists.vauxoo.com
home-page = http://docs.vauxoo.com/
classifier =
    Environment :: Vauxoo
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Topic :: Documentation

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    vauxoodocstheme

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[wheel]
universal = 1

[pbr]
warnerrors = True
